[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cmdtrix"
requires-python = ">=3.7"
authors = [{name = "Silas A. Kraume", email = "silas.kraume1552@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "console",
    "crossplatform",
    "matrix",
    "python",
    "terminal",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
]
dependencies = [
    "colorama>=0.4.6",
    "pynput>=1.6.0",
    "requests>=2.26.0",
]
dynamic = [
    "version",
    "description",
]

[project.scripts]
cmdtrix = "cmdtrix.__main__:entry_point"

[project.urls]
Github = "https://github.com/SilenZcience/cmdtrix"
Download = "https://github.com/SilenZcience/cmdtrix/tarball/master"
Tracker = "https://github.com/SilenZcience/cmdtrix/issues"